[package]
name = "mem_broker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.2", features = ["v4"] }


[features]
remote = []
debug = []
